skeplib/tests/fixtures/sema_project/valid/fn_cross_module/main.sk
from utils.math import add;
fn apply(f: Fn(Int, Int) -> Int, x: Int, y: Int) -> Int { return f(x, y); }
fn main() -> Int { return apply(add, 10, 5); }
