skeplib/tests/fixtures/sema_project/invalid/conflicting_wildcard/a.sk
fn x() -> Int { return 1; }
export { x };
